packages/ruff-autoboat/ruff_autoboat-0.14.12.tar.gz/ruff_autoboat-0.14.12/crates/ruff_python_formatter/tests/snapshots/format@stub_files__blank_line_after_nested_stub_class_eof.pyi.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
# A separate file to test out the behavior when there are a mix of blank lines
# and comments at EOF just after a nested stub class.

class Top:
    class Nested1:
        class Nested12:
            pass
        # comment
    class Nested2:
        pass



# comment



```

## Outputs
### Output 1
```
indent-style               = space
line-width                 = 88
indent-width               = 4
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Enabled
target_version             = 3.10
source_type                = Stub
max_blank_lines            = top_level=2, nested=1
```

```python
# A separate file to test out the behavior when there are a mix of blank lines
# and comments at EOF just after a nested stub class.

class Top:
    class Nested1:
        class Nested12:
            pass

        # comment

    class Nested2:
        pass

# comment
```
